--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,265 @@
+/* Body */
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+  margin: 0;
+  padding: 0;
+}
+
+/* Titulos */
+h1 {
+  color: #44197e;
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+h2 {
+  color: #44197e;
+  text-align: center;
+  font-size: 2rem;
+}
+
+/* Botones */
+button {
+  background-color: #44197e;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-right: 5px;
+}
+
+button:hover {
+  background-color: #331262;
+}
+
+/* Contenedor principal */
 .App {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Header */
+header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+/* Encabezado y lista ToDo */
+.todo-list {
+  margin-top: 20px;
+}
+
+.todo-header,
+.todo-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.todo-header {
+  background-color: #44197e;
+  color: white;
+  font-weight: bold;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.todo-item {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Flexbox para las columnas de la lista */
+.todo-checkbox, .todo-name, .todo-priority, .todo-due-date, .todo-actions {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo-checkbox {
+  flex: 0 0 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todo-name {
+  flex: 2;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-priority, .todo-due-date, .todo-actions {
+  flex: 1;
+}
+
+/* Botones de acciones */
+.todo-actions button {
+  background-color: #44197e;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 0 5px;
+}
+
+.todo-actions button:hover {
+  background-color: #331262;
+}
+
+/* Tareas completadas */
+.todo-item.done .todo-name {
+  text-decoration: line-through;
+  color: gray;
+}
+
+/* Colores segun la fecha */
+.red {
+  background-color: rgba(241, 90, 82, 0.2);
+}
+
+.yellow {
+  background-color: rgba(245, 188, 24, 0.2);
+}
+
+.green {
+  background-color: rgba(143, 198, 64, 0.2);
+}
+
+/* Paginación */
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.page-item {
+  margin: 0 9px;
+}
+
+.page-link {
+  padding: 10px 15px;
+  background-color: #40C1EF;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+}
+
+.page-link:hover {
+  background-color: #2e94bb;
+}
+
+.page-item.active .page-link {
+  background-color: #44197e;
+}
+.page-arrow .page-link {
+  padding: 5px 10px;
+  font-size: 0.85rem;
+  margin: 0 2px;
+}
+
+.page-arrow .page-link:hover {
+  background-color: #2e94bb;
+}
+
+/* Formulario */
+.todo-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #f9f9f9;
+  padding: 30px;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.todo-form input,
+.todo-form select {
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.todo-form button {
+  align-self: flex-end;
+  margin-top: 10px;
+}
+
+/* Estadisticas */
+.statistics {
+  margin-top: 20px;
+  background-color: #f1f1f1;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+/* Filtros */
+.filters {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.filters input,
+.filters select {
+  padding: 10px;
+  margin-right: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+/* Flexbox para organizar los botones en el formulario */
+.todo-form-buttons {
+  display: flex;
+  justify-content: flex-end; /* Alineamos los botones a la derecha */
+  gap: 10px; /* Espacio entre los botones */
+  margin-top: 10px;
+}
+
+.todo-form button {
+  background-color: #44197e;
   color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.todo-form button:hover {
+  background-color: #331262;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+/* Fondo oscuro cuando se abre el modal */
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Contenido del modal */
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  width: 600px;
+  max-width: 100%;
+  position: relative;
 }
